overlays/nginx_blue_green/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns-prod"
spec:
  ingressClassName: nginx
  rules:
  - host: BLUE_REDACTED
    http:
      paths:
      - backend:
          service:
            name: blue
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - BLUE_REDACTED
    secretName: blue-tls
